force-app/main/default/objects/Auto_Unit_Recognition_Mapping__mdt/Auto_Unit_Recognition_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Controls field mapping during Individual Enrollment cloning.</description>
    <label>Auto Unit Recognition Mapping</label>
    <pluralLabel>Auto Unit Recognition Mapping</pluralLabel>
</CustomObject>