force-app/main/default/objects/Auto_Unit_Recognition_Mapping__mdt/fields/Auto_Unit_Recognition_Config__c.field-meta.xml
<CustomField>
    <fullName>Auto_Unit_Recognition_Config__c</fullName>
    <label>Auto Unit Recognition Config</label>
    <referenceTo>Auto_Unit_Recognition_Config__mdt</referenceTo>
    <relationshipLabel>Auto Unit Recognition Mapping</relationshipLabel>
    <relationshipName>Auto_Unit_Recognition_Mapping</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>