force-app/main/default/objects/Auto_Unit_Recognition_Mapping__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <description>The target individual enrollment field.</description>
    <inlineHelpText>The target individual enrollment field.</inlineHelpText>
    <label>Target Field API Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>