force-app/main/default/objects/Auto_Unit_Recognition_Mapping__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value for the target field, it can be static value or merge field e.g., {reduivy__Field_A__c} - {reduivy__Field_B__c}</description>
    <inlineHelpText>The value for the target field, it can be static value or merge field e.g., {reduivy__Field_A__c} - {reduivy__Field_B__c}</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>