force-app/main/default/objects/Auto_Unit_Recognition_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Auto_Unit_Recognition_Config__c</columns>
    <columns>Target_Field_API_Name__c</columns>
    <columns>Value__c</columns>
    <columns>Active__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>